--- a/terraform/.gitignore
+++ b/terraform/.gitignore
@@ -7,6 +7,13 @@
 .terraform.lock.hcl
 terraform.lock.hcl
 
+# Terraform Plans (ephemeral, may contain secrets)
+tfplan
+*.tfplan
+
+# Backend config (contains bucket names)
+backend.hcl
+
 # Lambda
 lambda_function.zip
 
